--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <title>Western States Lottery Projection</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="{{rootURL}}coi-serviceworker.js"></script>
+    <script src="coi-serviceworker.js"></script>
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
